# runo

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE  README.md  VERSIONING.md  justfile  rust-toolchain.toml
crates/example/: Cargo.toml
crates/example/src/: main.rs  simple_app.rs  task_manager.rs
crates/runo/: Cargo.toml
crates/runo/docs/en/: README.md  architecture.md  knowledge-event-input.md  knowledge-fundamentals.md  knowledge-rendering-performance.md  knowledge-testing-release.md
crates/runo/docs/ja/: README.md  architecture.md  knowledge-fundamentals.md  knowledge-layout-widget.md  knowledge-rendering-performance.md
crates/runo/src/: README.md  event.rs  font.rs  input.rs  lib.rs  option_ext.rs
crates/runo/src/app/: events.rs  frame.rs  gpu.rs  gpu_runtime.rs  mod.rs  runner.rs  runtime.rs
crates/runo/src/cache/: mod.rs  text_layout.rs
crates/runo/src/hooks/: effect.rs  mod.rs  state.rs  use_effect.rs  use_state.rs
crates/runo/src/layout/: div.rs  mod.rs  stack.rs
crates/runo/src/retained/: mod.rs  node.rs
crates/runo/src/retained/input/: mod.rs  pointer.rs  text_box.rs
crates/runo/src/retained/paint/: button.rs  checkbox.rs  combo_box.rs  div.rs  interaction_color.rs  label.rs  mod.rs  radio_button.rs  slider.rs  (+2 more)
crates/runo/src/theme/: color.rs
crates/runo/src/ui/: events.rs  mod.rs  state.rs  widgets.rs
crates/runo/src/widget/: button.rs  checkbox.rs  combo_box.rs  label.rs  mod.rs  radio_button.rs  slider.rs  text.rs  text_box.rs
crates/runo/tests/: public_api.rs
crates/runo/tests/unit/: event.rs  font.rs  input.rs  lib.rs
(+136 files in other folders)
