[package]
name = "runo"
version = "0.1.0"
edition = "2024"
description = "Experimental retained-mode GUI framework core built with winit, wgpu, and vello."
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/kanata9819/runo"
homepage = "https://github.com/kanata9819/runo"
documentation = "https://docs.rs/runo"

[dependencies]
vello = "0.7"
winit = "0.30"
pollster = "0.4"
skrifa = "0.40"
arboard = "3"
